# Promptmeteo

./: .dockerignore  .gitignore  .zenodo.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: black.yml  code_lint.yml  code_testing.yml  publish_docker.yml  publish_package.yml  zenodo_action.yml
data/: classification_data.csv
data/amazon_reviews_en/: amazon_reviews_multi-test.parquet
data/amazon_reviews_sp/: README.md  amazon_reviews_multi-test.parquet
docs/source/: classes.rst  conf.py  definition.rst  index.rst  install.rst  modules.rst  promptmeteo.models.rst  promptmeteo.parsers.rst  promptmeteo.prompts.rst  promptmeteo.rst  promptmeteo.selector.rst  promptmeteo.tasks.rst  quickstart.rst
docs/source/notebooks/: 01_promptmeteo_usage.ipynb  02_model_tuning.ipynb  03_sentiment_analysis.ipynb  04_test_flant5_classification_prompts.ipynb  05_test_openai_classification_prompts.ipynb  06_test_openai_api-generation.ipynb
examples/: 01_minimal_example.py  01_promptmeteo_usage.ipynb  02_model_tuning.ipynb  02_parametrization.py  03_save_and_load.py  03_sentiment_analysis.ipynb  04_command_example.py  04_sentiment_analysis.ipynb  04_test_flant5_classification_prompts.ipynb  05_test_openai_classification_prompts.ipynb  06_test_openai_api-generation.ipynb
promptmeteo/: __init__.py  api_formatter.py  api_generator.py  base.py  code_generator.py  constants.py  doc_inherit.py  document_classifier.py  document_qa.py  json_info_extraction.py  json_summarizer.py  main.py  summarizer.py  tools.py  validations.py
promptmeteo/models/: __init__.py  azure_openai.py  base.py  bedrock.py  fake_llm.py  google_vertexai.py  hf_hub_api.py  hf_pipeline.py  openai.py
promptmeteo/parsers/: __init__.py  api_parser.py  base.py  classification_parser.py  dummy_parser.py  json_parser.py
promptmeteo/prompts/: __init__.py  anthropic.claude-v2_en_summarization.prompt  anthropic.claude-v2_es_classification.prompt  anthropic.claude-v2_es_summarization.prompt  base.py  classification_prompt.py  fake-static_en_classification.prompt  fake-static_en_code-generation.prompt  fake-static_en_ner.prompt  fake-static_es_classification.prompt  fake-static_es_code-generation.prompt  fake-static_es_ner.prompt  fake-static_es_qa.prompt  google-flan-t5-small_en_classification.prompt  google-flan-t5-small_en_code-generation.prompt  google-flan-t5-small_en_ner.prompt  google-flan-t5-small_en_qa.prompt  google-flan-t5-small_es_classification.prompt  google-flan-t5-small_es_code-generation.prompt  google-flan-t5-small_es_ner.prompt  gpt-3.5-turbo-16k_en_api-correction.prompt  gpt-3.5-turbo-16k_en_json-info-extraction.prompt  gpt-3.5-turbo-16k_es_json-info-extraction.prompt  gpt-3.5-turbo-16k_es_json-summarizer.prompt  gpt-3.5-turbo-16k_es_summarization.prompt  gpt-3.5-turbo-instruct_en_classification.prompt  gpt-3.5-turbo-instruct_es_classification.prompt  gpt-35-turbo-16k_en_api-generation.prompt  ner_prompt.py  text-bison-32k_es_classification.prompt  text-bison@001_en_code-generation.prompt  text-bison@001_es_classification.prompt  text-bison@001_es_code-generation.prompt  text-davinci-003_en_classification.prompt  text-davinci-003_en_code-generation.prompt  text-davinci-003_en_ner.prompt  text-davinci-003_es_classification.prompt  text-davinci-003_es_code-generation.prompt  text-davinci-003_es_ner.prompt  tiiuae-falcon-7b-instruct_es_code-generation.prompt
promptmeteo/prompts/sp/: classification.prompt  code_generation.prompt  ner.prompt
promptmeteo/prompts/templates/sp/: classification_prompt.yml  ner_prompt.yml
promptmeteo/selector/: __init__.py  base.py  custom_selectors.py  marginal_relevance_selector.py  semantic_similarity_selector.py
promptmeteo/tasks/: __init__.py  base.py  classification_task.py  ner_task.py  task.py  task_builder.py
prompts/: classification.yml  ner_prompt.yml
src/promptmeteo/: __init__.py  main.py
src/promptmeteo/models/: base.py
src/promptmeteo/prompts/: base.py  classification_prompt.py
src/promptmeteo/selector/: __init__.py
src/promptmeteo/tasks/: base.py  classification_task.py
tests/: test_base_supervised.py  test_base_unsupervised.py  test_code_generator.py  test_document_classifier.py  test_main.py  test_models.py  test_parsers.py  test_prompts.py  test_selectors.py  test_task.py
tests/tools/: __init__.py  dictionary_checker.py
