[build-system]
requires = ["setuptools>=65.0.0", "wheel >= 0.38", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "promptmeteo"
dynamic = ["version"]
description = "Enable the use of LLMs as a conventional ML model"
readme = "README.md"
authors = [{ name = "Angel Delgado", email = "adelgado@paradigmadigital.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "langchain == 0.0.234",
    "torch == 2.0.1",
    "pydantic == 1.10.11",
    "faiss-cpu == 1.7.4",
    "transformers ==4.31.0",
    "openai==0.27.8",
    "sentence-transformers==2.2.2",
    "tiktoken==0.4.0",
    "google-cloud-aiplatform>=1.26.1"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["promptmeteo"]

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.setuptools.package-data]
"promptmeteo.prompts.templates.sp" = ["*.prompt"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-mock"
]
dev = [
    "promptmeteo[test]",
    "mkdocs",
    "pre-commit",
    "pip-tools",
    "black",
    "pylint"
]
examples = [
    "bumpver",
    "jupyter",
    "polars",
    "seaborn",
    "scikit-learn"
]
all = [
    "promptmeteo[dev, examples]",
]


